Resolves tdf#130742 - Flat ODF in start center

Added fodt,fods,fopd,fodg to typeMatchesExtension

Change-Id: Ife8139af87ecc5af8a5e98c9d9dd7830c3a3231a